# pierwszy

./: .gitignore  3dbinx6 21.05.25.py  LICENSE  Makefile  README.md  cartons.xml  data.xml  interlock_demo.py  main.py  pack_layer.py  pallets.xml  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  settings.yaml
.github/workflows/: lint.yml
algorithms/: __init__.py
core/: algorithms.py  models.py  utils.py
data/: pallets.xml
docs/: instrukcje_pally_webapp.md
gui/: tab_db.py
legacy/: README.md
packing_app/core/: algorithms.py  pattern_io.py
pallet-calculator/: index.html
palletizer_core/: __init__.py  selector.py  sequencer.py  stacking.py
pally_web/: package-lock.json  package.json  tsconfig.json
tests/: test_algorithms.py  test_carton_selection.py  test_cube_efficiency.py  test_deep_search_algorithms.py  test_dense_layout.py  test_edit_selection_filter.py  test_editor_state.py  test_empty_space.py  test_empty_space_preview.py  test_gui_sync.py  test_interlock.py  test_interlock_default.py  test_layer_propagation.py  test_metrics.py  test_pallet_snapshot.py  test_palletizer_baseline.py  test_palletizer_core.py  test_palletizer_extensions.py  test_pally_export.py  test_pattern_apply.py  test_pattern_apply_debouncer.py  test_pattern_format_roundtrip.py  test_pattern_io.py  test_pattern_restore_apply.py  test_repository.py  test_row_by_row_manual.py  test_sanity.py  test_sequencer.py  test_solution_catalog.py  test_support.py  test_tab_2d_display_helpers.py  test_transformations.py  test_units.py  test_ur_caps_preview.py
utils/: __init__.py
(+87 files in other folders)
